# ubuntu-packages

./: .gitignore  README.md
appdata-tools/: appdata-tools_0.1.7.orig.tar.xz
appdata-tools/appdata-tools-0.1.7/: ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  config.h  config.h.in  configure  configure.ac
appdata-tools/appdata-tools-0.1.7/data/: Makefile.am  Makefile.in  appdata-rng-init.el.in  appdata-validate.xml  appdata-xml.m4  appdata.rnc  appdata.rng  appdata.sch  appdata.xsd  broken.appdata.xml  metadata.appdata.xml  schema-locating-rules.xml  screenshots.appdata.xml  short-para-before-list.appdata.xml  success.appdata.xml  translated.appdata.xml
appdata-tools/appdata-tools-0.1.7/debian/: changelog  control  copyright  rules  watch
appdata-tools/appdata-tools-0.1.7/po/: POTFILES.in  en_GB.po
appdata-tools/appdata-tools-0.1.7/src/: Makefile.am  Makefile.in  appdata-common.c  appdata-common.h  appdata-problem.c  appdata-problem.h  appdata-self-test.c  appdata-validate.c
dh-exec/dh-exec-0.13/: .travis.yml  HACKING.md  Makefile.am  README.md  configure.ac
dh-exec/dh-exec-0.13/debian/: changelog  control  copyright  gbp.conf  rules
dh-exec/dh-exec-0.13/lib/: dh-exec-filter-arch  dh-exec-filter-comments  dh-exec-illiterate-tangle  dh-exec-install-rename  dh-exec-subst-env  dh-exec-subst-multiarch
dh-exec/dh-exec-0.13/src/: dh-exec-illiterate.1  dh-exec-install.1  dh-exec-install.c  dh-exec-subst.1  dh-exec.1  dh-exec.c  dh-exec.lib.c  dh-exec.lib.h  dh-exec.simple.c
dh-exec/dh-exec-0.13/t/: test.lib.bash  test_combined.bats  test_dh.bats  test_dh_exec.bats  test_filter.bats  test_illiterate.bats  test_install_copy.bats  test_install_syntax.bats  test_strip.bats  test_subst_env.bats  test_subst_multiarch.bats  test_subst_syntax.bats
easytag/: easytag_2.1.10.orig.tar.xz  easytag_2.2.1.orig.tar.xz  easytag_2.2.3.orig.tar.xz  easytag_2.2.4.orig.tar.xz
easytag/easytag-2.1.10/: ChangeLog  Makefile.in  aclocal.m4  config.h.in  configure
easytag/easytag-2.1.10/debian/: changelog  control  copyright  rules  watch
easytag/easytag-2.1.10/help/: Makefile.in
easytag/easytag-2.2.1/: ChangeLog  Makefile.in  aclocal.m4  config.h.in  configure
easytag/easytag-2.2.1/debian/: changelog  control  easytag.changelogs  rules
easytag/easytag-2.2.1/help/: Makefile.in
easytag/easytag-2.2.3/: ChangeLog  configure
easytag/easytag-2.2.3/debian/: changelog
easytag/easytag-2.2.3/help/: Makefile.in
easytag/easytag-2.2.4/: ChangeLog  aclocal.m4  configure
easytag/easytag-2.2.4/debian/: changelog  control
easytag/easytag-2.2.4/help/: Makefile.in
gparted/: gparted_0.22.0.orig.tar.bz2  gparted_0.23.0.orig.tar.bz2  gparted_0.24.0.orig.tar.bz2
gparted/gparted-0.22.0/: ChangeLog  Makefile.in  config.h.in  configure  gparted.appdata.xml  gparted.desktop
gparted/gparted-0.22.0/data/: Makefile.in
gparted/gparted-0.22.0/debian/: changelog  control
gparted/gparted-0.22.0/doc/: Makefile.in
gparted/gparted-0.22.0/include/: Makefile.in
gparted/gparted-0.22.0/src/: Makefile.in
gparted/gparted-0.23.0/: ChangeLog  aclocal.m4  configure  gparted.appdata.xml  gparted.desktop
gparted/gparted-0.23.0/compose/: Makefile.in
gparted/gparted-0.23.0/debian/: changelog  control
gparted/gparted-0.23.0/help/: Makefile.in
gparted/gparted-0.24.0/: ChangeLog  Makefile.in  aclocal.m4  configure  gparted.desktop
gparted/gparted-0.24.0/compose/: Makefile.in
gparted/gparted-0.24.0/data/: Makefile.in
gparted/gparted-0.24.0/debian/: changelog  rules
gparted/gparted-0.24.0/doc/: Makefile.in
gparted/gparted-0.24.0/help/: Makefile.in
gparted/gparted-0.24.0/include/: Makefile.in
gparted/gparted-0.24.0/src/: Makefile.in
grub2/grub2-2.04/debian/: .git-dpm  build-efi-images  changelog  control  grub-common.install.in  postinst.in  rules  templates.in
mpd/: mpd_0.19.1.orig.tar.xz
mpd/mpd-0.19.1/: Makefile.in  aclocal.m4  config.h.in  configure
mpd/mpd-0.19.1/debian/: changelog  control  rules
mpd/mpd-0.19.1/doc/: doxygen.conf  user.xml
mpd/mpd-0.19.1/systemd/: mpd.service.in
mpdas/mpdas-0.4.0/debian/: changelog  control  mpdas.examples
mpdas/mpdas-0.4.1/debian/: changelog  copyright
mpdas/mpdas-0.4.2/debian/: changelog
mpdas/mpdas-0.4.5/debian/: changelog  files  rules  watch
python-mpd2/python-mpd2-0.5.3/debian/: changelog  control  python-mpd2.docs  watch
python-mpd2/python-mpd2-0.5.3/python_mpd2.egg-info/: PKG-INFO  SOURCES.txt
python-mpd2/python-mpd2-0.5.4/: PKG-INFO
python-mpd2/python-mpd2-0.5.4/debian/: changelog  rules
python-mpd2/python-mpd2-0.5.5/debian/: changelog  copyright  python-mpd2.docs
python-mpd2/python-mpd2-0.5.5/python_mpd2.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sonata/sonata-1.7.git.20140219.81fc2c1198/debian/: changelog  copyright  rules  sonata.docs  (+3 more)
unity-settings-daemon/unity-settings-daemon-15.04.1+15.04.20150408/: autogen.sh  configure.ac
unity-settings-daemon/unity-settings-daemon-15.04.1+15.04.20150408/data/: Makefile.am  libunity-settings-daemon.pc.in  unity-settings-daemon-uninstalled.pc.in  unity-settings-daemon.desktop.in.in  unity-settings-daemon.pc.in
unity-settings-daemon/unity-settings-daemon-15.04.1+15.04.20150408/gnome-settings-daemon/: Makefile.am  display-name.c  gnome-settings-manager.c  gnome-settings-plugin-info.c  gsd-idle-monitor-private.h  gsd-idle-monitor.c  gsd-idle-monitor.h  gsd-pnp-ids.c  gsd-pnp-ids.h  gsd-rr-config.c  gsd-rr-config.h  gsd-rr-output-info.c  gsd-rr-private.h  gsd-rr.c  gsd-rr.h  main.c  unity-settings-daemon-localeexec.in
unity-settings-daemon/unity-settings-daemon-15.04.1+15.04.20150408/plugins/common/: Makefile.am  gsd-input-helper.c  gsd-input-helper.h  gsd-keygrab.c
unity-settings-daemon/unity-settings-daemon-15.04.1+15.04.20150408/plugins/wacom/: Makefile.am  com.ubuntu.unity-settings-daemon.plugins.wacom.policy.in.in  gsd-wacom-device.c  gsd-wacom-manager.c
unity-settings-daemon/unity-settings-daemon-15.04.1+15.04.20150408/plugins/xrandr/: Makefile.am  gsd-xrandr-manager.c
util-linux/util-linux-2.20.1/: ChangeLog  configure
(+339 files in other folders)
